--- a/bbz-project/package.json
+++ b/bbz-project/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-lazyload": "^3.2.0",
     "react-modal": "^3.12.1",
     "react-responsive-modal": "^6.0.1",
     "react-scripts": "4.0.3",
